# paisa-agent-ai

./: .gitignore  FIREBASE_AUTH_TROUBLESHOOTING.md  README.md
.cursor/rules/: project-guidelines.mdc
.taskmaster/: state.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  (+3 more)
backend/: .dockerignore  .gcloudignore  ARTIFACT_SYSTEM.md  Dockerfile  README.md  debug_firebase.py  pyproject.toml  requirements.txt  run.py  test_artifact_system.py  test_firebase_auth.py
backend/src/: main.py
backend/src/agents/: prompts.py  root_agent.py
backend/src/agents/sub_agents/: __init__.py
backend/src/agents/sub_agents/finalise_response_agent/: agent.py  prompt.py
backend/src/apis/: artifacts.py  chat_sessions.py  health.py  messages.py
backend/src/auth/: firebase_auth.py
backend/src/config/: firebase_config.py  setup_app.py
backend/src/dependencies/: __init__.py  repositories.py  services.py
backend/src/models/: __init__.py  artifact.py  chat_session.py  data_access_log.py  message.py  schedule.py  user.py
backend/src/repositories/: __init__.py  artifact_repository.py  base_repository.py  chat_session_repository.py  message_repository.py  user_repository.py
backend/src/services/: __init__.py  artifact_service.py  chat_session_service.py  message_service.py  runner_manager_service.py
backend/src/utils/: database.py
backend/tests/: test_endpoints.py
docs/: README.md
frontend/: README.md  package.json
infrastructure/: README.md  env.example  mcp-gateway-docker-compose.yaml
(+30 files in other folders)
